[Mac] Hide bookmark bar empty view by default

This is a speculative fix for crbug.com/714407,
specifically the post-refactor manifestation in #10. Speculative
because I can't repro.

BUG=714407

Review-Url: https://codereview.chromium.org/2867823002
Cr-Commit-Position: refs/heads/master@{#470367}

Former-commit-id: 777cb457cb9989f53d135239d36196a41835b6a9